service-anyllm.yaml
kind: Service
apiVersion: v1
metadata:
 name: anyllmsvc
spec:
 ports:
   - protocol: TCP
     port: 80
     targetPort: 3001
 selector:
   app: anyllm
